# ros_projects

./: CONTRIBUTORS.md  README.md
exam_proctoring/: CMakeLists.txt  README.md  package.xml
exam_proctoring/action/: Alert.action
exam_proctoring/launch/: full_system.launch
exam_proctoring/msg/: ObjectData.msg
exam_proctoring/scripts/: alert_node.py  behavior_node.py  camera_node.py  combined_viewer_node.py  depth_node.py  face_node.py  monitor_node.py  object_detection_node.py  rule_node.py
exam_proctoring/srv/: CheckViolation.srv
grid_fleet/: .gitignore  CMakeLists.txt  README.md  package.xml
grid_fleet/scripts/: monitor.py  task_manager.py  traffic_controller.py  vehicle_node.py
grid_fleet/srv/: RequestMove.srv  RequestTask.srv
multi_view_geometry/: CMakeLists.txt  README.md  package.xml
multi_view_geometry/action/: Report.action
multi_view_geometry/msg/: CameraMotion.msg  DescriptorArray.msg  GeometricInliers.msg  KeypointArray.msg  MatchArray.msg  SystemState.msg
multi_view_geometry/scripts/: camera_node.py  decision_node.py  descriptor_node.py  filtering_node.py  geometry_node.py  keypoint_node.py  matching_node.py  motion_node.py
multi_view_geometry/srv/: CheckGeometry.srv
smart_surveillance/: CMakeLists.txt  README.md  package.xml
smart_surveillance/action/: SecurityAction.action
smart_surveillance/msg/: SceneAnalysis.msg  SecurityAlert.msg  SecurityEvent.msg
smart_surveillance/scripts/: camera_stream.py  depth_estimator.py  event_logger.py  event_manager.py  object_detector.py  scene_analysis.py  (+2 more)
visual_nav_system/: README.md
(+2 files in other folders)
